--- a/Modules/admin/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/Modules/admin/locale/fr_FR/LC_MESSAGES/messages.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: emoncms3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-05-01 11:54+0100\n"
-"PO-Revision-Date: 2013-05-01 11:55+0100\n"
+"POT-Creation-Date: 2014-01-17 17:48+0100\n"
+"PO-Revision-Date: 2014-01-17 17:50+0100\n"
 "Last-Translator: VIALAT Mickael <contact@planete-domotique.com>\n"
 "Language-Team: Baptiste Gaultier (Télécom Bretagne) <baptiste."
 "gaultier@telecom-bretagne.eu>\n"
@@ -14,8 +14,32 @@ msgstr ""
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Generator: Poedit 1.5.5\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: ../../..\n"
+
+#: ../../../update_view.php:29 ../../../admin_main_view.php:17
+msgid "Update database"
+msgstr "Mise à jour de la base de données"
+
+#: ../../../update_view.php:37
+msgid "Apply changes"
+msgstr "Appliquer les modifications"
+
+#: ../../../update_view.php:44
+msgid "Check for further updates"
+msgstr "Tester les mises à jour"
+
+#: ../../../update_view.php:51
+msgid "Database is up to date "
+msgstr "La base de données est à jour"
+
+#: ../../../update_view.php:51
+msgid "Nothing to do"
+msgstr "Aucune mise à jour nécessaire"
+
+#: ../../../admin_menu.php:8
+msgid "Admin"
+msgstr "Admin"
 
 #: ../../../admin_db_view.php:1
 msgid "Database setup, update and status check"
@@ -42,7 +66,7 @@ msgstr ""
 msgid "Schema item"
 msgstr "Schéma bdd"
 
-#: ../../../admin_db_view.php:7
+#: ../../../admin_db_view.php:7 ../../../userlist_view.php:37
 msgid "Name"
 msgstr "Nom"
 
@@ -50,11 +74,15 @@ msgstr "Nom"
 msgid "Status"
 msgstr "Satus"
 
-#: ../../../admin_main_view.php:7 ../../../update_view.php:29
-msgid "Update database"
-msgstr "Mise à jour de la base de données"
+#: ../../../admin_main_view.php:7 ../../../admin_main_view.php:12
+msgid "Users"
+msgstr "Utilisateurs"
 
 #: ../../../admin_main_view.php:8
+msgid "Administer user accounts"
+msgstr "Administrer les comptes d'utilisateurs"
+
+#: ../../../admin_main_view.php:18
 msgid ""
 "Run this after updating emoncms, after installing a new module or to check "
 "emoncms database status."
@@ -62,26 +90,14 @@ msgstr ""
 "Lancez cette commande après une mise à jour de Emoncms, après l'installation "
 "d'un nouveau module ou pour tester l'intégrité de la base de données"
 
-#: ../../../admin_main_view.php:12
+#: ../../../admin_main_view.php:22
 msgid "Update & check"
 msgstr "Mise à jour & Analyse"
 
-#: ../../../admin_menu.php:7
-msgid "Admin"
-msgstr "Admin"
+#: ../../../userlist_view.php:36
+msgid "Id"
+msgstr ""
 
-#: ../../../update_view.php:37
-msgid "Apply changes"
-msgstr "Appliquer les modifications"
-
-#: ../../../update_view.php:44
-msgid "Check for further updates"
-msgstr "Tester les mises à jour"
-
-#: ../../../update_view.php:51
-msgid "Database is up to date "
-msgstr "La base de données est à jour"
-
-#: ../../../update_view.php:51
-msgid "Nothing to do"
-msgstr "Aucune mise à jour nécessaire"
+#: ../../../userlist_view.php:38
+msgid "Tag"
+msgstr "Étiquette"
