--- a/Modules/dashboard/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/Modules/dashboard/locale/fr_FR/LC_MESSAGES/messages.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: emoncms3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-23 21:45+0100\n"
-"PO-Revision-Date: 2014-01-23 21:46+0100\n"
+"POT-Creation-Date: 2014-02-04 18:27+0100\n"
+"PO-Revision-Date: 2014-02-04 18:29+0100\n"
 "Last-Translator: Benoît Pique <benoit.pique@gmail.com>\n"
 "Language-Team: Baptiste Gaultier (Télécom Bretagne) <baptiste."
 "gaultier@telecom-bretagne.eu>\n"
@@ -275,7 +275,7 @@ msgstr "Barres graphe"
 
 #: ../../../dashboard_langjs.php:107
 msgid "timestoredaily"
-msgstr ""
+msgstr "Nouveau tableau de bord vierge"
 
 #: ../../../dashboard_langjs.php:108
 msgid "zoom"
@@ -317,7 +317,7 @@ msgstr ""
 msgid "multigraph"
 msgstr "Multi graphe"
 
-#: ../../../dashboard_menu.php:8 ../../../Views/dashboard_list.php:15
+#: ../../../dashboard_menu.php:8 ../../../Views/dashboard_list.php:11
 msgid "Dashboard"
 msgstr "Tableau de bord"
 
@@ -345,7 +345,7 @@ msgstr "Description : "
 msgid "Make this dashboard the first shown"
 msgstr "Définir ce Tableau de bord par défaut"
 
-#: ../../../Views/dashboard_config.php:34 ../../../Views/dashboard_list.php:54
+#: ../../../Views/dashboard_config.php:34 ../../../Views/dashboard_list.php:49
 msgid "Main"
 msgstr "Principal"
 
@@ -353,7 +353,7 @@ msgstr "Principal"
 msgid "Activate this dashboard"
 msgstr "Activer le tableau de bord"
 
-#: ../../../Views/dashboard_config.php:39 ../../../Views/dashboard_list.php:56
+#: ../../../Views/dashboard_config.php:39 ../../../Views/dashboard_list.php:51
 msgid "Published"
 msgstr "Actif"
 
@@ -362,7 +362,7 @@ msgid "Anyone with the URL can see this dashboard"
 msgstr ""
 "Une url permet un accès direct au Tableau de bord sans authentification"
 
-#: ../../../Views/dashboard_config.php:44 ../../../Views/dashboard_list.php:55
+#: ../../../Views/dashboard_config.php:44 ../../../Views/dashboard_list.php:50
 msgid "Public"
 msgstr "Public"
 
@@ -391,7 +391,7 @@ msgid "Configure element"
 msgstr "Configurer l'élement"
 
 #: ../../../Views/dashboard_edit_view.php:39
-#: ../../../Views/dashboard_list.php:35
+#: ../../../Views/dashboard_list.php:92
 msgid "Cancel"
 msgstr "Annuler"
 
@@ -400,7 +400,7 @@ msgid "Configure"
 msgstr "Configuration"
 
 #: ../../../Views/dashboard_edit_view.php:49
-#: ../../../Views/dashboard_list.php:62
+#: ../../../Views/dashboard_list.php:57
 msgid "Delete"
 msgstr "Supprimer"
 
@@ -412,59 +412,75 @@ msgstr "Non modifié"
 msgid "Saved"
 msgstr "Sauvegardé"
 
-#: ../../../Views/dashboard_list.php:19
+#: ../../../Views/dashboard_list.php:13 ../../../Views/dashboard_list.php:25
+msgid "Add new dashbord"
+msgstr "Nouveau Tableau de bord vierge"
+
+#: ../../../Views/dashboard_list.php:22
 msgid "No dashboards created"
 msgstr "Aucun Tableau de bord créé"
 
-#: ../../../Views/dashboard_list.php:20
+#: ../../../Views/dashboard_list.php:23
 msgid "Maybe you would like to add your first dashboard using the button"
 msgstr ""
 "Vous pouvez ajouter votre premier Tableau de bord en cliquant sur ce bouton :"
 
-#: ../../../Views/dashboard_list.php:29
+#: ../../../Views/dashboard_list.php:45
+msgid "Id"
+msgstr "id"
+
+#: ../../../Views/dashboard_list.php:46
+msgid "Name"
+msgstr "Nom"
+
+#: ../../../Views/dashboard_list.php:47
+msgid "Alias"
+msgstr "Alias"
+
+#: ../../../Views/dashboard_list.php:48
+msgid "Description"
+msgstr "Description"
+
+#: ../../../Views/dashboard_list.php:49
+msgid "set as main"
+msgstr "Définir comme principal"
+
+#: ../../../Views/dashboard_list.php:50
+msgid "make dashbord public"
+msgstr "Rendre le tableau de bord public"
+
+#: ../../../Views/dashboard_list.php:51
+msgid "publish dashbord"
+msgstr "Publier le tableau de bord"
+
+#: ../../../Views/dashboard_list.php:54
+msgid "Duplicate"
+msgstr "Dupliquer"
+
+#: ../../../Views/dashboard_list.php:56
+msgid "Edit"
+msgstr "Modifier"
+
+#: ../../../Views/dashboard_list.php:58
+msgid "Design"
+msgstr "Dessiner"
+
+#: ../../../Views/dashboard_list.php:59
+msgid "Show"
+msgstr "Voir"
+
+#: ../../../Views/dashboard_list.php:87
 msgid "WARNING deleting a dashboard is permanent"
 msgstr ""
 "ATTENTION ! La suppression d'un Tableau de bord est une action définitive."
 
-#: ../../../Views/dashboard_list.php:32
+#: ../../../Views/dashboard_list.php:88
 msgid "Are you sure you want to delete this dashboard?"
 msgstr "Etes vous sûr de vouloir supprimer ce tableau de bord ? "
 
-#: ../../../Views/dashboard_list.php:36
+#: ../../../Views/dashboard_list.php:98
 msgid "Delete permanently"
 msgstr "Supprimer définitivement"
-
-#: ../../../Views/dashboard_list.php:50
-msgid "Id"
-msgstr "id"
-
-#: ../../../Views/dashboard_list.php:51
-msgid "Name"
-msgstr "Nom"
-
-#: ../../../Views/dashboard_list.php:52
-msgid "Alias"
-msgstr "Alias"
-
-#: ../../../Views/dashboard_list.php:53
-msgid "Description"
-msgstr "Description"
-
-#: ../../../Views/dashboard_list.php:59
-msgid "Duplicate"
-msgstr "Dupliquer"
-
-#: ../../../Views/dashboard_list.php:61
-msgid "Edit"
-msgstr "Modifier"
-
-#: ../../../Views/dashboard_list.php:63
-msgid "Design"
-msgstr "Dessiner"
-
-#: ../../../Views/dashboard_list.php:64
-msgid "Show"
-msgstr "Voir"
 
 #: ../../../Views/dashboard_menu.php:44
 msgid "Dashboards:"
